--- a/static/system/backoffice/css/style.css
+++ b/static/system/backoffice/css/style.css
@@ -1332,32 +1332,32 @@ body {
 	-webkit-border-radius:3px
 }
 .ui-icon {
-	background-image:url(/static/system/backoffice/css/images/icons-blue.png)
+	background-image:url(images/icons-blue.png)
 }
 .ui-widget-content .ui-icon {
-	background-image:url(/static/system/backoffice/css/images/icons-blue.png)
+	background-image:url(images/icons-blue.png)
 }
 .ui-widget-header .ui-icon {
-	background-image:url(/static/system/backoffice/css/images/icons-lgray.png)
+	background-image:url(images/icons-lgray.png)
 }
 .ui-state-default .ui-icon {
-	background-image:url(/static/system/backoffice/css/images/icons-lgray.png)
+	background-image:url(images/icons-lgray.png)
 }
 .ui-state-hover .ui-icon {
-	background-image:url(/static/system/backoffice/css/images/icons-gray.png)
+	background-image:url(images/icons-gray.png)
 }
 .ui-state-focus .ui-icon {
-	background-image:url(/static/system/backoffice/css/images/icons-blue.png)
+	background-image:url(images/icons-blue.png)
 }
 .ui-state-active .ui-icon {
-	background-image:url(/static/system/backoffice/css/images/icons-blue.png)
+	background-image:url(images/icons-blue.png)
 }
 .ui-state-highlight .ui-icon {
-	background-image:url(/static/system/backoffice/css/images/icons-blue.png)
+	background-image:url(images/icons-blue.png)
 }
 .ui-widget-content {
 	border:1px solid #ddd;
-	background:#fff url(/static/system/backoffice/css/images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x;
+	background:#fff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x;
 	color:#444
 }
 .ui-widget-content a {
@@ -1365,7 +1365,7 @@ body {
 }
 .ui-widget-header {
 	border:1px solid #ddd;
-	background:#ddd url(/static/system/backoffice/css/images/ui-bg_highlight-soft_50_dddddd_1x100.png) 50% 50% repeat-x;
+	background:#ddd url(images/ui-bg_highlight-soft_50_dddddd_1x100.png) 50% 50% repeat-x;
 	color:#444;
 	text-transform:uppercase
 }
@@ -1374,7 +1374,7 @@ body {
 }
 .ui-state-default, .ui-widget-content .ui-state-default, .pagination a {
 	border:1px solid #ddd;
-	background:#f6f6f6 url(/static/system/backoffice/css/images/ui-bg_highlight-soft_100_f6f6f6_1x100.png) 50% 50% repeat-x;
+	background:#f6f6f6 url(images/ui-bg_highlight-soft_100_f6f6f6_1x100.png) 50% 50% repeat-x;
 	font-weight:bold;
 	color:#0073ea;
 	outline:none
@@ -1386,7 +1386,7 @@ body {
 }
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .pagination a:hover, a.btn:hover, button.ui-state-default:hover {
 	border:1px solid #9d9d9d;
-	background:#0073ea url(/static/system/backoffice/css/images/ui-bg_highlight-soft_25_0073ea_1x100.png) 50% 50% repeat-x;
+	background:#0073ea url(images/ui-bg_highlight-soft_25_0073ea_1x100.png) 50% 50% repeat-x;
 	font-weight:bold;
 	color:#333;
 	outline:none
@@ -1398,7 +1398,7 @@ body {
 }
 .ui-state-active, .ui-widget-content .ui-state-active {
 	border:1px solid #ddd!important;
-	background:#fff url(/static/system/backoffice/css/images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x;
+	background:#fff url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x;
 	font-weight:bold;
 	color:#333;
 	outline:none
@@ -1415,7 +1415,7 @@ a:hover, .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited
 	border-top:#c7c7c7 solid 1px
 }
 #header {
-	background:url('/static/system/backoffice/css/images/header-bg.png') repeat-x
+	background:url('images/header-bg.png') repeat-x
 }
 #header #top-menu {
 	color:#646464
