--- a/trunk/application/modules/main/views/backoffice/layouts/default.phtml
+++ b/trunk/application/modules/main/views/backoffice/layouts/default.phtml
@@ -17,10 +17,10 @@ echo $this->headTitle()?>
 
 <script type="text/javascript" src="<?php echo App::baseUri()?>static/system/clientscripts/custom.js"></script>
 <!--[if IE 6]>
-	<link href="<?php echo App::baseUri()?>static/system/css/ie6.css" rel="stylesheet" media="all" />
+	<link href="<?php echo App::baseUri()?>static/system/backoffice/css/ie6.css" rel="stylesheet" media="all" />
 	<![endif]-->
 <!--[if IE 7]>
-	<link href="<?php echo App::baseUri()?>static/system/css/ie7.css" rel="stylesheet" media="all" />
+	<link href="<?php echo App::baseUri()?>static/system/backoffice/css/ie7.css" rel="stylesheet" media="all" />
 	<![endif]-->
 <?php echo $this->inlineScript()?>
 </head>
