--- a/trunk/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
+++ b/trunk/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
@@ -1,5 +1,4 @@
-<h3><?php
-echo __('System information')?></h3>
+<div class="title title-spacing"><h3><?php echo __('System information')?></h3></div>
 <table>
 	<tr>
 		<th width="40%"><?php
