--- a/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
+++ b/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
@@ -1,4 +1,6 @@
-<div class="title title-spacing"><h3><?php echo __('System information')?></h3></div>
+<div class="title title-spacing">
+<h3><?php echo __('System information')?></h3>
+</div>
 <table>
 	<tr>
 		<th width="40%"><?php
