--- a/trunk/application/modules/main/views/backoffice/layouts/default.phtml
+++ b/trunk/application/modules/main/views/backoffice/layouts/default.phtml
@@ -15,7 +15,8 @@ echo $this->headTitle()?>
 
 <?php echo $this->headScript()?>
 
-<script type="text/javascript" src="<?php echo App::baseUri()?>static/system/clientscripts/custom.js"></script>
+<script type="text/javascript"
+	src="<?php echo App::baseUri()?>static/system/clientscripts/custom.js"></script>
 <!--[if IE 6]>
 	<link href="<?php echo App::baseUri()?>static/system/backoffice/css/ie6.css" rel="stylesheet" media="all" />
 	<![endif]-->
@@ -26,103 +27,122 @@ echo $this->headTitle()?>
 </head>
 <body>
 <div id="header">
-  <div id="top-menu"> 
-  <a href="<?php	echo $this->url(array('module' => 'main', 'controller' => 'index', 'action' => 'index'))?>"><?php echo __('Go to homepage')?></a>
-  |  <a href="<?php	echo $this->url(array('module' => 'main', 'controller' => 'profile', 'action' => 'settings'))?>"><?php echo __('Settings')?></a>
-  | <span><?php echo __('Logged in as')?> <a href="<?php	echo $this->url(array('profile_id' => $this->member->getId()), 'view_profile')?>"><?php echo $this->member->getField('first_name') . ' ' . $this->member->getField('last_name')?></a></span>
-  | <a href="<?php	echo $this->url(array('profile_id' => $this->member->getId()), 'view_profile')?>"><?php echo __('Profile')?></a>
-  | <a href="<?php	echo $this->url(array('module' => 'main', 'controller' => 'profile', 'action' => 'logout'))?>"><?php echo __('Log Out')?></a>
+<div id="top-menu"><a
+	href="<?php	echo $this->url(array('module' => 'main', 'controller' => 'index', 'action' => 'index'))?>"><?php echo __('Go to homepage')?></a>
+| <a
+	href="<?php	echo $this->url(array('module' => 'main', 'controller' => 'profile', 'action' => 'settings'))?>"><?php echo __('Settings')?></a>
+| <span><?php echo __('Logged in as')?> <a
+	href="<?php	echo $this->url(array('profile_id' => $this->member->getId()), 'view_profile')?>"><?php echo $this->member->getField('first_name') . ' ' . $this->member->getField('last_name')?></a></span>
+| <a
+	href="<?php	echo $this->url(array('profile_id' => $this->member->getId()), 'view_profile')?>"><?php echo __('Profile')?></a>
+| <a
+	href="<?php	echo $this->url(array('module' => 'main', 'controller' => 'profile', 'action' => 'logout'))?>"><?php echo __('Log Out')?></a>
 
-        </div>
-  <div id="sitename"> <a href="index.html" class="logo float-left" title="Admintasia">Admintasia</a>
-    <div class="button float-right"> <a href="#" id="dialog_link" class="btn ui-state-default ui-corner-all"><span class="ui-icon ui-icon-newwin"></span>Open Dialog</a> <a href="#" id="login_dialog" class="btn ui-state-default ui-corner-all"><span class="ui-icon ui-icon-image"></span>Open Login Box</a> </div>
-  </div>
-  <?php echo $this->navigation()->menu($this->topMenu)->setUlClass('sf-navbar')?>
+</div>
+<div id="sitename"><a href="index.html" class="logo float-left"
+	title="Admintasia">Admintasia</a>
+<div class="button float-right"><a href="#" id="dialog_link"
+	class="btn ui-state-default ui-corner-all"><span
+	class="ui-icon ui-icon-newwin"></span>Open Dialog</a> <a href="#"
+	id="login_dialog" class="btn ui-state-default ui-corner-all"><span
+	class="ui-icon ui-icon-image"></span>Open Login Box</a></div>
+</div>
+<?php echo $this->navigation()->menu($this->topMenu)->setUlClass('sf-navbar')?>
 </div>
 <div id="page-wrapper">
-  <div id="main-wrapper">
-    <div id="main-content">
-        <p>
-            <?php
-            $this->navigation()->breadcrumbs()->setSeparator(' » ');
-            echo $this->navigation()->breadcrumbs($this->topMenu)?></p>
-        <p><?php echo $this->messages()?></p>
-        
-        <?php echo $this->layout()->content?>
-      <div class="clearfix"></div>
-    </div>
-    <div class="clearfix"></div>
-  </div>
-  <div id="sidebar">
-  <?php echo $this->render($this->sidebarBlocks)?>
-    <div class="side-col ui-sortable">
-      <div class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
-        <div class="portlet-header ui-widget-header">Theme Switcher</div>
-        <div class="portlet-content">
-          <ul class="side-menu">
-            <li> <a class="set_theme" id="default" href="javascript:void(0);" style="font-weight:bold;" title="Default Theme">Default Theme</a> </li>
-            <li> <a class="set_theme" id="light_blue" href="javascript:void(0);" title="Light Blue Theme">Light Blue Theme</a> </li>
-          </ul>
-        </div>
-      </div>
-      <div class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
-        <div class="portlet-header ui-widget-header">Layout Options</div>
-        <div class="portlet-content">
-          <ul class="side-menu">
-            <li> Here, you can set the page width, either fixed or fluid. You decide!<br />
-              <br />
-            </li>
-            <li id="fluid_layout"> <a href="javascript:void(0);" title="Fluid Layout">Switch to <b>Fluid Layout</b></a> </li>
-            <li id="fixed_layout"> <a href="javascript:void(0);" title="Fixed Layout">Switch to <b>Fixed Layout</b></a> </li>
-          </ul>
-        </div>
-      </div>
-      <div class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
-        <div class="portlet-header ui-widget-header">Navigation Menu</div>
-        <div class="portlet-content">
-          <div id="accordion">
-            <div>
-              <h3><a href="#">Dashboard</a></h3>
-              <div>
-                <ul class="side-menu">
-                  <li><a href="index.html" title="Administration">Administration</a></li>
-                  <li><a href="forms.html" title="Forms">Forms Example</a></li>
-                  <li><a href="tables.html" title="Tables">Tables example</a></li>
-                </ul>
-              </div>
-            </div>
-            <div>
-              <h3><a href="#">Dummy drop down</a></h3>
-              <div>
-                <ul class="side-menu">
-                  <li><a href="index.html" title="Administration">Administration</a></li>
-                  <li><a href="forms.html" title="Forms">Forms Example</a></li>
-                  <li><a href="tables.html" title="Tables">Tables example</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="other-box yellow-box ui-corner-all">
-        <div class="cont tooltip ui-corner-all" title="Tooltips, tooltips, tooltips !">
-          <h3>Tooltip !</h3>
-          <p>This is a sample tooltip !</p>
-        </div>
-      </div>
-      <div class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
-        <div class="portlet-header ui-widget-header">Accordion</div>
-        <div class="portlet-content">
-          <div id="datepicker"></div>
-        </div>
-      </div>
-    </div>
-    <div class="clearfix"></div>
-  </div>
+<div id="main-wrapper">
+<div id="main-content">
+<p><?php
+$this->navigation()->breadcrumbs()->setSeparator(' ï¿½ ');
+echo $this->navigation()->breadcrumbs($this->topMenu)?></p>
+<p><?php echo $this->messages()?></p>
+
+<?php echo $this->layout()->content?>
+<div class="clearfix"></div>
+</div>
+<div class="clearfix"></div>
+</div>
+<div id="sidebar"><?php echo $this->render($this->sidebarBlocks)?>
+<div class="side-col ui-sortable">
+<div
+	class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
+<div class="portlet-header ui-widget-header">Theme Switcher</div>
+<div class="portlet-content">
+<ul class="side-menu">
+	<li><a class="set_theme" id="default" href="javascript:void(0);"
+		style="font-weight: bold;" title="Default Theme">Default Theme</a></li>
+	<li><a class="set_theme" id="light_blue" href="javascript:void(0);"
+		title="Light Blue Theme">Light Blue Theme</a></li>
+</ul>
+</div>
+</div>
+<div
+	class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
+<div class="portlet-header ui-widget-header">Layout Options</div>
+<div class="portlet-content">
+<ul class="side-menu">
+	<li>Here, you can set the page width, either fixed or fluid. You
+	decide!<br />
+	<br />
+	</li>
+	<li id="fluid_layout"><a href="javascript:void(0);"
+		title="Fluid Layout">Switch to <b>Fluid Layout</b></a></li>
+	<li id="fixed_layout"><a href="javascript:void(0);"
+		title="Fixed Layout">Switch to <b>Fixed Layout</b></a></li>
+</ul>
+</div>
+</div>
+<div
+	class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
+<div class="portlet-header ui-widget-header">Navigation Menu</div>
+<div class="portlet-content">
+<div id="accordion">
+<div>
+<h3><a href="#">Dashboard</a></h3>
+<div>
+<ul class="side-menu">
+	<li><a href="index.html" title="Administration">Administration</a></li>
+	<li><a href="forms.html" title="Forms">Forms Example</a></li>
+	<li><a href="tables.html" title="Tables">Tables example</a></li>
+</ul>
+</div>
+</div>
+<div>
+<h3><a href="#">Dummy drop down</a></h3>
+<div>
+<ul class="side-menu">
+	<li><a href="index.html" title="Administration">Administration</a></li>
+	<li><a href="forms.html" title="Forms">Forms Example</a></li>
+	<li><a href="tables.html" title="Tables">Tables example</a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="other-box yellow-box ui-corner-all">
+<div class="cont tooltip ui-corner-all"
+	title="Tooltips, tooltips, tooltips !">
+<h3>Tooltip !</h3>
+<p>This is a sample tooltip !</p>
+</div>
+</div>
+<div
+	class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
+<div class="portlet-header ui-widget-header">Accordion</div>
+<div class="portlet-content">
+<div id="datepicker"></div>
+</div>
+</div>
+</div>
+<div class="clearfix"></div>
+</div>
 </div>
 <div class="clearfix"></div>
 <div id="footer">
-  <div id="menu"> <?php echo $this->navigation()->menu($this->footerMenu)?> </div>
-  Copyright &copy; <?php echo date('Y')?> <?php echo $this->projectTitle?> </div>
+<div id="menu"><?php echo $this->navigation()->menu($this->footerMenu)?>
+</div>
+Copyright &copy; <?php echo date('Y')?> <?php echo $this->projectTitle?>
+</div>
 </body>
 </html>
