--- a/trunk/application/modules/blog/views/backoffice/html/admin/create-blog.phtml
+++ b/trunk/application/modules/blog/views/backoffice/html/admin/create-blog.phtml
@@ -1,5 +1,2 @@
-<h3><?php
-echo __('Create new blog')?></h3>
-
-<?php
-echo $this->form?>
+<div class="title title-spacing"><h3><?php echo __('Create new blog')?></h3></div>
+<?php echo $this->form?>
