--- a/trunk/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
+++ b/trunk/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
@@ -1,7 +1,7 @@
 <div class="title title-spacing">
 <h3><?php echo __('System information')?></h3>
 </div>
-<table>
+<table class="clean_text">
 	<tr>
 		<th width="40%"><?php
 		echo __('Operating system')?></th>
